# face_counterfactual

./: .gitignore  analysis.ipynb  dice.ipynb  experiment_dice.ipynb  experiments.ipynb  experiments_kde.ipynb  face.py  pyproject.toml  training.ipynb
data/: clients_at_risk.csv  credit_scaler.joblib
