[project]
name = "counterfactual-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.4.2",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy<2.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
    "umap-learn>=0.5.9.post2",
]
